objects/Product2.object
<CustomObject>
    <fields>
        <fullName>EnergyAid_Product_SKU__c</fullName>
        <formula>PF_Abbrivation__c &amp;&quot;-&quot;&amp; PTM_Abbreviation__c &amp;&quot;-&quot;&amp; PTS_Abbreviation__c &amp;&quot;-&quot;&amp; Product_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnergyAid Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Abbrivation__c</fullName>
        <formula>CASE( Family , &quot;Inventory&quot;, &quot;EAC&quot;, &quot;Non-Inventory&quot;, &quot;EAN&quot;, &quot;RMA Inventory&quot;, &quot;EAR&quot;, &quot;Equipment&quot;, &quot;EAE&quot;, &quot;Service&quot;, &quot;EAS&quot;, &quot;Z&quot;)</formula>
        <label>PF Abbrivation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTM_Abbreviation__c</fullName>
        <formula>CASE( Product_Type__c ,&quot;Module&quot;,&quot;M&quot;,&quot;Inverter&quot;,&quot;NV&quot;,&quot;Inverter Monitoring&quot;,&quot;NVM&quot;,&quot;Inverter Accessory&quot;,&quot;NVA&quot;,&quot;Balance Of System (BOS)&quot;,&quot;BS&quot;,&quot;Racking and Mounting&quot;,&quot;RM&quot;,&quot;Battery&quot;,&quot;BA&quot;,&quot;Battery Accessory	&quot;,&quot;BAA&quot;,&quot;Charge Controller&quot;,&quot;CC&quot;,&quot;Tool&quot;,&quot;T&quot;,&quot;Supply&quot;,&quot;S&quot;,&quot;None&quot;,&quot;Z&quot;,&quot;ZZ&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTM Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTS_Abbreviation__c</fullName>
        <formula>CASE(Product_Type_Sub__c,&quot;Accessory&quot;,&quot;ACC&quot;,&quot;Adapter&quot;,&quot;ADPT&quot;,&quot;Attachment&quot;,&quot;ATT&quot;,&quot;Ballast Bay&quot;,&quot;BALBY&quot;,&quot;Base Mount&quot;,&quot;BASMNT&quot;,&quot;Battery&quot;,&quot;BAT&quot;,&quot;Battery BOS&quot;,&quot;BATBS&quot;,&quot;Block&quot;,&quot;BLC&quot;,&quot;Bolt&quot;,&quot;BLT&quot;,&quot;Brace Assembly&quot;,&quot;BRAAS&quot;,&quot;Bracket&quot;,&quot;BRA&quot;,&quot;Busbar&quot;,&quot;BUS&quot;,&quot;Cable&quot;,&quot;CAB&quot;,&quot;Cap&quot;,&quot;CAP&quot;,&quot;Circuit Breaker&quot;,&quot;CIRB&quot;,&quot;Clamp&quot;,&quot;CLMP&quot;,&quot;Clip&quot;,&quot;CLP&quot;,&quot;Combiner Box&quot;,&quot;CMBX&quot;,&quot;Communication Card&quot;,&quot;CMCRD&quot;,&quot;Conduit&quot;,&quot;CND&quot;,&quot;Conduit Mount&quot;,&quot;CNDMT&quot;,&quot;Connector&quot;,&quot;CNCTR&quot;,&quot;Controller&quot;,&quot;CNTRL&quot;,&quot;Converter&quot;,&quot;CNVRT&quot;,&quot;Disconnect&quot;,&quot;DSCNT&quot;,&quot;Display&quot;,&quot;DSPL&quot;,&quot;Electrical Accessory&quot;,&quot;ELEACC&quot;,&quot;Electric Board&quot;,&quot;ELEBD&quot;,&quot;Enclosure&quot;,&quot;ENC&quot;,&quot;Flashing&quot;,&quot;FLA&quot;,&quot;Fuse&quot;,&quot;F&quot;,&quot;Fuse Holder&quot;,&quot;FHLD&quot;,&quot;Gateway&quot;,&quot;GATE&quot;,&quot;Hook&quot;,&quot;HK&quot;,&quot;Inverter Component&quot;,&quot;INVCMP&quot;,&quot;Junction Box&quot;,&quot;JUNBX&quot;,&quot;Kit&quot;,&quot;KT&quot;,&quot;Label&quot;,&quot;LAB&quot;,&quot;L-Foot&quot;,&quot;LFET&quot;,&quot;Load Center&quot;,&quot;LDCNT&quot;,&quot;Lug&quot;,&quot;LUG&quot;,&quot;Meter&quot;,&quot;MET&quot;,&quot;Meter Can&quot;,&quot;METCA&quot;,&quot;Micro&quot;,&quot;MCR&quot;,&quot;Misc&quot;,&quot;MSC&quot;,&quot;Module&quot;,&quot;MD&quot;,&quot;Monitoring Accessory&quot;,&quot;MNACC&quot;,&quot;Monitoring Cable&quot;,&quot;MNCAB&quot;,&quot;Monitoring Kit&quot;,&quot;MNKT&quot;,&quot;MPPT&quot;,&quot;MPPT&quot;,&quot;Optimizer&quot;,&quot;PTMZR&quot;,&quot;Other&quot;,&quot;0&quot;,&quot;Panel&quot;,&quot;PNL&quot;,&quot;Panel Washing&quot;,&quot;PNLWA&quot;,&quot;PWM&quot;,&quot;PWM&quot;,&quot;Rack&quot;,&quot;RAC&quot;,&quot;Rail&quot;,&quot;RAL&quot;,&quot;Rapid Shutdown&quot;,&quot;RAPSH&quot;,&quot;Safety&quot;,&quot;SAF&quot;,&quot;Sensor&quot;,&quot;SEN&quot;,&quot;Side of Pole Mount	&quot;,&quot;SPM&quot;,&quot;Skirt&quot;,&quot;SKRT&quot;,&quot;Splice Kit&quot;,&quot;SPLKT&quot;,&quot;Stand Off&quot;,&quot;STAF&quot;,&quot;Stopper Sleeve&quot;,&quot;STSV&quot;,&quot;String&quot;,&quot;STR&quot;,&quot;Surge Device&quot;,&quot;SURDE&quot;,&quot;Tilt Leg&quot;,&quot;TLEG&quot;,&quot;Tool&quot;,&quot;TL&quot;,&quot;Top of Pole Mount&quot;,&quot;TPM&quot;,&quot;Trunk Cable&quot;,&quot;TRNKCAB&quot;,&quot;Uniform&quot;,&quot;UNF&quot;,&quot;Washer&quot;,&quot;WSH&quot;,&quot;Wire&quot;,&quot;W&quot;,&quot;Wire Management&quot;,&quot;WMGT&quot;,&quot;None&quot;,&quot;Z&quot;,&quot;ZZ&quot;)</formula>
        <label>PTS Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Type_Sub__c</fullName>
        <description>Sub Category of the Product Type</description>
        <inlineHelpText>Sub Category of the Product Type</inlineHelpText>
        <label>Product Type (Sub)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Adapter</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Ballast Bay</fullName>
                </value>
                <value>
                    <fullName>Base Mount</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                </value>
                <value>
                    <fullName>Battery BOS</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Bolt</fullName>
                </value>
                <value>
                    <fullName>Brace Assembly</fullName>
                </value>
                <value>
                    <fullName>Bracket</fullName>
                </value>
                <value>
                    <fullName>Busbar</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Cap</fullName>
                </value>
                <value>
                    <fullName>Circuit Breaker</fullName>
                </value>
                <value>
                    <fullName>Clamp</fullName>
                </value>
                <value>
                    <fullName>Clip</fullName>
                </value>
                <value>
                    <fullName>Combiner Box</fullName>
                </value>
                <value>
                    <fullName>Communication Card</fullName>
                </value>
                <value>
                    <fullName>Conduit</fullName>
                </value>
                <value>
                    <fullName>Conduit Mount</fullName>
                </value>
                <value>
                    <fullName>Connector</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Converter</fullName>
                </value>
                <value>
                    <fullName>Disconnect</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Electrical Accessory</fullName>
                </value>
                <value>
                    <fullName>Electric Board</fullName>
                </value>
                <value>
                    <fullName>Enclosure</fullName>
                </value>
                <value>
                    <fullName>EV Charger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Main Category of Product</description>
        <inlineHelpText>Main Category of Product</inlineHelpText>
        <label>Product Type (Main)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Module</fullName>
                </value>
                <value>
                    <fullName>Inverter</fullName>
                </value>
                <value>
                    <fullName>Inverter Monitoring</fullName>
                </value>
                <value>
                    <fullName>Inverter Accessory</fullName>
                </value>
                <value>
                    <fullName>Balance Of System (BOS)</fullName>
                </value>
                <value>
                    <fullName>Racking and Mounting</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                </value>
                <value>
                    <fullName>Battery Accessory</fullName>
                </value>
                <value>
                    <fullName>Charge Controller</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>